# mcp-server-email

./: .gitignore  CITATION.cff  README.md  pyproject.toml  repo-schema.json  server.py
.github/workflows/: test.yml
src/mcp_server_email/: server.py
tests/: test_server.py
