[project]
name = "mcp-server-email"
version = "0.1.0"
description = "Give your AI assistant an email address"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "mcp>=1.6.0",]
[[project.authors]]
name = "R.Keelan"
email = "R.Keelan@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-email = "mcp_server_email:main"
