[project]
name = "mcp-server-email"
version = "0.1.0"
description = "Give your AI assistant an email address"
readme = "README.md"
authors = [{name = "R.Keelan", email = "R.Keelan@gmail.com"}]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
 "google-api-python-client>=2.166.0",
 "google-auth>=2.38.0",
 "google-auth-oauthlib>=1.2.1",
 "mcp[cli]>=1.6.0",
 "pydantic>=2.11.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/RKeelan/mcp-server-email"
Changelog = "https://github.com/RKeelan/mcp-server-email/releases"
Issues = "https://github.com/RKeelan/mcp-server-email/issues"
CI = "https://github.com/RKeelan/mcp-server-email/actions"

[project.optional-dependencies]
test = [
    "coverage[toml]>=7.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=5.0"
]

[tool.coverage.run]
branch = true
source = ["."]
omit = ["*/__main__.py", "tests/*", ".venv/*", "__pycache__/*"]

[tool.coverage.report]
show_missing = true
precision = 1
fail_under = 95

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
